Policy,Roles,Administrator,Manager

--- a/AuthorizationAuthentication/AuthorizationAuthentication/Views/Home/AccessDenied.cshtml
+++ b/AuthorizationAuthentication/AuthorizationAuthentication/Views/Home/AccessDenied.cshtml
@@ -1,4 +1,4 @@
-﻿<h1>Home</h1>
+﻿<h1>AccessDenied</h1>
 
 <a asp-controller="Admin" asp-action="Index">Admin</a>
 <a asp-controller="Admin" asp-action="Administrator">Administrator</a>
