--- a/AuthorizationAuthentication/AuthorizationAuthentication/Views/Admin/Login.cshtml
+++ b/AuthorizationAuthentication/AuthorizationAuthentication/Views/Admin/Login.cshtml
@@ -4,15 +4,16 @@
 <a asp-controller="Home" asp-action="Index">Home</a>
 
 <form asp-controller="Admin" asp-action="Login" method="post">
-    <input hidden asp-for="ReturnUrl" />
+    <div asp-validation-summary="ModelOnly"></div>
+    <input hidden asp-for="ReturnUrl"/>
     <div>
         <label>UserName</label>
-        <input asp-for="UserName" />
+        <input asp-for="UserName"/>
         <span asp-validation-for="UserName"></span>
     </div>
     <div>
         <label>Password</label>
-        <input type="password" asp-for="Password" />
+        <input type="password" asp-for="Password"/>
         <span asp-validation-for="Password"></span>
     </div>
     <div>
